[gd_scene load_steps=66 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://menu/experiment.hdr" type="Texture" id=2]
[ext_resource path="res://player/player.dae" type="PackedScene" id=3]
[ext_resource path="res://menu/floor.png" type="Texture" id=4]
[ext_resource path="res://music/intro.ogg" type="AudioStream" id=5]
[ext_resource path="res://menu/tps_demo.png" type="Texture" id=6]
[ext_resource path="res://menu/button_play.png" type="Texture" id=7]
[ext_resource path="res://menu/button_play_hover.png" type="Texture" id=8]
[ext_resource path="res://menu/button_settings.png" type="Texture" id=9]
[ext_resource path="res://menu/button_settings_hover.png" type="Texture" id=10]
[ext_resource path="res://menu/button_quit.png" type="Texture" id=11]
[ext_resource path="res://menu/button_quit_hover.png" type="Texture" id=12]
[ext_resource path="res://menu/button_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://menu/button_pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://menu/button_normal.tres" type="StyleBox" id=15]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
glow_enabled = true
glow_levels/7 = true
glow_intensity = 0.4
glow_blend_mode = 1
glow_hdr_threshold = 0.34
glow_bicubic_upscale = true

[sub_resource type="QuadMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )
metallic = 0.78

[sub_resource type="AnimationNodeAnimation" id=5]
resource_local_to_scene = true
animation = "eyes-cycle"

[sub_resource type="AnimationNodeAnimation" id=6]
resource_local_to_scene = true
animation = "Idlecombatrest-cycle"

[sub_resource type="AnimationNodeBlend2" id=7]
resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:eyelid.d.L", "Robot_Skeleton/Skeleton:eyelid.d.R", "Robot_Skeleton/Skeleton:eyelid.u.L", "Robot_Skeleton/Skeleton:eyelid.u.R", "Robot_Skeleton/Skeleton:eyes" ]

[sub_resource type="AnimationNodeBlendTree" id=8]
resource_local_to_scene = true
graph_offset = Vector2( -401, 57 )
nodes/Animation/node = SubResource( 6 )
nodes/Animation/position = Vector2( -120, 100 )
"nodes/Animation 2/node" = SubResource( 5 )
"nodes/Animation 2/position" = Vector2( -140, 220 )
nodes/Blend2/node = SubResource( 7 )
nodes/Blend2/position = Vector2( 180, 120 )
nodes/output/position = Vector2( 420, 120 )
node_connections = [ "output", 0, "Blend2", "Blend2", 0, "Animation", "Blend2", 1, "Animation 2" ]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="ButtonGroup" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = SubResource( 12 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=18]
size = 40
font_data = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFontData" id=22]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=23]
size = 40
font_data = SubResource( 22 )

[sub_resource type="ButtonGroup" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="DynamicFontData" id=26]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=27]
size = 40
font_data = SubResource( 26 )

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="DynamicFontData" id=29]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=30]
size = 40
font_data = SubResource( 29 )

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="DynamicFontData" id=32]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=33]
size = 40
font_data = SubResource( 32 )

[sub_resource type="DynamicFontData" id=34]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=35]
size = 40
font_data = SubResource( 34 )

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="DynamicFontData" id=37]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=38]
size = 40
font_data = SubResource( 37 )

[sub_resource type="ButtonGroup" id=39]

[sub_resource type="StyleBoxEmpty" id=40]

[sub_resource type="DynamicFontData" id=41]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=42]
size = 40
font_data = SubResource( 41 )

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="DynamicFontData" id=44]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=45]
size = 40
font_data = SubResource( 44 )

[sub_resource type="ButtonGroup" id=46]

[sub_resource type="StyleBoxEmpty" id=47]

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.34902, 0.34902, 0.34902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="DynamicFontData" id=49]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=50]
size = 40
font_data = SubResource( 49 )

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Scene Root" parent="." instance=ExtResource( 3 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 15, 0, 0, 0, 0, 15, 0, -15, 0, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 0.967027, 0, 0.254675, -0.225291, 0.466312, 0.855452, -0.118758, -0.88462, 0.450936, 0.557445, 2.31204, 0.556668 )
shadow_enabled = true
shadow_bias = 0.01

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.871624, -0.0363083, 0.488828, 0, 0.997253, 0.0740721, -0.490175, -0.064563, 0.86923, 0.0702285, 1.22404, 2.09675 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../Scene Root/AnimationPlayer")
active = true
parameters/Blend2/blend_amount = 0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.1403
margin_top = 5.03506
margin_right = 1044.14
margin_bottom = 238.035
texture = ExtResource( 6 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="main" type="Control" parent="ui"]
anchor_top = -0.00189865
anchor_right = 1.0
anchor_bottom = 0.998101
margin_left = -4.10107
margin_top = 2.05054
margin_right = -4.10107
margin_bottom = 2.05054
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 390.0
margin_right = 400.0
margin_bottom = 440.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 490.0
margin_right = 400.0
margin_bottom = 540.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="quit" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 590.0
margin_right = 400.0
margin_bottom = 640.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="settings" type="Control" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="gi_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 390.0
margin_right = 368.0
margin_bottom = 443.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Global Illumination:"

[node name="gi_high" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 390.0
margin_right = 650.0
margin_bottom = 447.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 10 )
text = "High"

[node name="gi_low" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 390.0
margin_right = 940.0
margin_bottom = 447.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 10 )
text = "Low"

[node name="gi_disabled" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 390.0
margin_right = 1230.0
margin_bottom = 447.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 10 )
text = "Disabled"

[node name="aa_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 510.0
margin_right = 368.0
margin_bottom = 563.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Anti Aliasing:"

[node name="aa_8x" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 510.0
margin_right = 650.0
margin_bottom = 567.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 24 )
text = "8x"

[node name="aa_4x" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 510.0
margin_right = 940.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 24 )
text = "4x"

[node name="aa_2x" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 510.0
margin_right = 1230.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 28 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 30 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 24 )
text = "2x"

[node name="aa_disabled" type="Button" parent="ui/settings"]
margin_left = 1270.0
margin_top = 510.0
margin_right = 1520.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 31 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 33 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 24 )
text = "Disabled"

[node name="ssao_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 620.0
margin_right = 368.0
margin_bottom = 673.0
custom_fonts/font = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SSAO:"

[node name="ssao_high" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 620.0
margin_right = 650.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 39 )
text = "High"

[node name="ssao_low" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 620.0
margin_right = 940.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 40 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 42 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 39 )
text = "Low"

[node name="ssao_disabled" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 620.0
margin_right = 1230.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 43 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 45 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 39 )
text = "Disabled"

[node name="resolution_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 730.0
margin_right = 368.0
margin_bottom = 783.0
custom_fonts/font = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Resolution:"

[node name="resolution_native" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 730.0
margin_right = 650.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 46 )
text = "Native"

[node name="resolution_1080" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 730.0
margin_right = 940.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 46 )
text = "1080"

[node name="resolution_720" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 730.0
margin_right = 1230.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 46 )
text = "720"

[node name="resolution_576" type="Button" parent="ui/settings"]
margin_left = 1270.0
margin_top = 730.0
margin_right = 1520.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 36 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = SubResource( 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 46 )
text = "576"

[node name="apply" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 930.0
margin_right = 650.0
margin_bottom = 987.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
custom_fonts/font = SubResource( 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Apply"

[node name="cancel" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 920.0
margin_right = 1230.0
margin_bottom = 977.0
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
custom_fonts/font = SubResource( 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Cancel"

[node name="loading" type="Control" parent="ui"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="label" type="Label" parent="ui/loading"]
margin_left = 120.0
margin_top = 930.0
margin_right = 288.0
margin_bottom = 983.0
custom_fonts/font = ExtResource( 13 )
text = "Loading..."

[node name="begin_load_timer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="pressed" from="ui/main/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ui/main/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ui/main/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ui/settings/apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="ui/settings/cancel" to="." method="_on_cancel_pressed"]
[connection signal="timeout" from="begin_load_timer" to="." method="_on_begin_load_timer_timeout"]

[editable path="Scene Root"]
